gerador_roteiros/tests/testfiles/0.9.0/generatorvalidation/invalid/cenario_com_estrutura_passo.mm
<map version="0.9.0">
<!-- To view this file, download free mind mapping software FreeMind from http://freemind.sourceforge.net -->
<node CREATED="1346676326754" ID="ID_714140398" MODIFIED="1346676329564" TEXT="MM">
<node CREATED="1346681473376" ID="ID_639232067" MODIFIED="1346681483813" POSITION="right" TEXT="Sequ&#xea;ncia: 1&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: CENARIO ERRADO">
<node CREATED="1346681476897" ID="ID_505615834" MODIFIED="1346681489653" TEXT="Sequ&#xea;ncia: 2&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 2"/>
</node>
</node>
</map>
